# cmake-library

./: .gitlab-ci.yml
CI/: CMakeLists.txt
CI/tests/: CMakeLists.txt
CI/tests/Gurobi/: CMakeLists.txt
VCI/: .VCIQt.cmake.kate-swp  ACGCommon.cmake  ACGDoxygen.cmake  ACGQt.cmake  VCICommon.cmake  VCICompiler.cmake  VCIOutput.cmake  VCIPaths.cmake  VCIQt.cmake
finders/: FindCLP.cmake  FindCoinUtils.cmake  FindGurobi.cmake  FindLPSolve.cmake  FindMPFI.cmake  FindMPFR.cmake  FindMosek.cmake
